--- a/.travis.yml
+++ b/.travis.yml
@@ -8,3 +8,16 @@ before_install:
 
 script:
     - docker run -e CI=true noobdocker403/docker-react npm run test
+
+deploy:
+    edge: true
+    provider: elasticbeanstalk
+    region: "us-east-2"
+    app: "docker"
+    env: "Docker-env"
+    bucket_name: "elasticbeanstalk-us-east-2-039835854470"
+    bucket_path: "docker"
+    on:
+        branch: master
+    acess_key_id: $AWS_ACCESS_KEY
+    secret_access_key: $AWS_SECRET_KEY
